[gd_scene load_steps=7 format=3 uid="uid://b6i42i8goc61s"]

[ext_resource type="PackedScene" uid="uid://dddfvdravsbp7" path="res://UI/radio_ui/radio_ui.tscn" id="1_nmr65"]
[ext_resource type="Script" uid="uid://crc0lbp7e4x26" path="res://levels/level_base.gd" id="1_vmt1o"]
[ext_resource type="PackedScene" uid="uid://fkaptauc5mu0" path="res://UI/game_over_screen/game_over_screen.tscn" id="2_vmt1o"]

[sub_resource type="Animation" id="Animation_pjrb6"]
resource_name = "DayCycle"
length = 180.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelBase/AmbientLight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.0333333, 120.00001, 180),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.7188297, 0.4641232, 0.3343134, 1), Color(1, 0.27058825, 0.05490196, 1), Color(0, 0.007843138, 0.22352941, 1)]
}

[sub_resource type="Animation" id="Animation_xwkvk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelBase/AmbientLight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c651c"]
_data = {
&"DayCycle": SubResource("Animation_pjrb6"),
&"RESET": SubResource("Animation_xwkvk")
}

[node name="LevelBase" type="Node"]
script = ExtResource("1_vmt1o")

[node name="UI" type="CanvasLayer" parent="."]

[node name="RadioUI" parent="UI" instance=ExtResource("1_nmr65")]

[node name="GameOverScreen" parent="UI" instance=ExtResource("2_vmt1o")]
process_mode = 2
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_c651c")
}
autoplay = "DayCycle"

[node name="AmbientLight" type="CanvasModulate" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
